--- a/client/src/css-modules/SideNavComponent.module.css
+++ b/client/src/css-modules/SideNavComponent.module.css
@@ -11,8 +11,8 @@
 .openButtonClosed {
   display: block;
   margin-top: 2vh;
-  margin-left: 20%;
-  width: 60% !important;
+  margin-left: 10%;
+  width: 80% !important;
   padding: 0 !important;
   transition: 0.3s;
 
@@ -33,7 +33,7 @@
 .logoClosed {
   display: block;
   width: 31px;
-  margin: 19.2px auto;
+  margin: 1.8vh auto;
   transition: 0.3s;
 }
 
@@ -45,14 +45,14 @@
 }
 
 .lowerContent {
-  margin-top: 64px;
+  margin-top: 6vh;
 }
 
 .myFlowsButtonClosed,
 .createFlowButtonClosed {
-  width: 27px !important;
+  width: 80% !important;
   padding: 0 !important;
-  margin: 20.8px auto;
+  margin: 2vh 0;
   transition: 0.3s;
 }
 
@@ -75,9 +75,9 @@
 
 .myFlowsButtonOpen,
 .createFlowButtonOpen {
-  width: 43.4px !important;
-  padding: 5.2px;
-  margin: 10.4px auto;
+  width: 60%;
+  margin: 1vh auto;
+  padding: 1vh 0.6vw;
   transition: 0.3s;
 
   box-sizing: content-box;
@@ -88,11 +88,9 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   color: rgba(255, 255, 255, 0);
   font-size: 0;
-
-  margin-right: 2.2px;
-
   transition: 0.3s;
 }
 
@@ -124,14 +122,11 @@
 
 .myFlowsOpen,
 .createFlowOpen {
-  margin-top: 28px;
   display: flex;
   flex-direction: column;
   text-align: center;
   color: rgba(255, 255, 255, 1);
   font-size: 14px;
-
-  margin-right: 2.2px;
 
   transition: 0.3s;
 }
