--- a/client/src/css-modules/SideNavComponent.module.css
+++ b/client/src/css-modules/SideNavComponent.module.css
@@ -1,17 +1,22 @@
 .sidebarClosed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 38.4px;
   transition: 0.3s;
 }
 
 .sidebarOpen {
-  width: 76.8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80px;
   transition: 0.3s;
 }
 
 .openButtonClosed {
   display: block;
   margin-top: 2vh;
-  margin-left: 10%;
   width: 80% !important;
   padding: 0 !important;
   transition: 0.3s;
@@ -21,9 +26,9 @@
 
 .openButtonOpen {
   display: block;
-  margin-top: 41px;
-  width: 6.4px !important;
-  margin-left: 8.2px;
+  margin-top: 4vh;
+  width: 80% !important;
+  padding: 0;
 
   box-sizing: content-box;
 
@@ -33,26 +38,25 @@
 .logoClosed {
   display: block;
   width: 31px;
-  margin: 1.8vh auto;
+  margin: 1vh 0;
   transition: 0.3s;
 }
 
 .logoOpen {
   display: block;
-  width: 61.5px;
-  margin: 38.4px auto;
+  width: 62px;
+  margin: 2vh 0;
   transition: 0.3s;
 }
 
 .lowerContent {
-  margin-top: 6vh;
+  margin-top: 4vh;
 }
 
 .myFlowsButtonClosed,
 .createFlowButtonClosed {
   width: 80% !important;
   padding: 0 !important;
-  margin: 2vh 0;
   transition: 0.3s;
 }
 
@@ -66,8 +70,7 @@
 
 .lolButtonOpen {
   width: 43.4px !important;
-  padding: 0.4em !important;
-  margin-left: 10.4px;
+  padding: 0.4vw !important;
   transition: 0.3s;
 
   box-sizing: content-box;
@@ -75,9 +78,8 @@
 
 .myFlowsButtonOpen,
 .createFlowButtonOpen {
-  width: 60%;
-  margin: 1vh auto;
-  padding: 1vh 0.6vw;
+  width: 50%;
+  padding: 1vh 0.8vw;
   transition: 0.3s;
 
   box-sizing: content-box;
@@ -92,6 +94,7 @@
   color: rgba(255, 255, 255, 0);
   font-size: 0;
   transition: 0.3s;
+  margin-top: 1vh;
 }
 
 .lolClosed,
@@ -101,6 +104,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   color: rgba(255, 255, 255, 0);
   font-size: 0;
 
@@ -111,10 +115,11 @@
 .ssbmOpen,
 .overwatchOpen,
 .csgoOpen {
-  margin-top: 22.4px;
+  margin-top: 1vh;
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   color: rgba(255, 255, 255, 1);
   font-size: 14px;
   transition: 0.3s;
@@ -125,16 +130,25 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
   color: rgba(255, 255, 255, 1);
   font-size: 14px;
+  margin-top: 1vh;
 
   transition: 0.3s;
+}
+
+.catContainerClosed,
+.catContainerOpen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .gamepadClosed {
   color: white;
   display: block;
-  margin: 6.6px 5.5px;
+  margin-top: 1.2vh;
   font-size: 22px;
   border-bottom: 1px solid black;
   transition: font-size 0.3s;
@@ -143,7 +157,7 @@
 .gamepadOpen {
   color: white;
   display: block;
-  margin: 20px 8.4px;
+  margin-top: 2.4vh;
   font-size: 44px;
   border-bottom: 1px solid black;
   transition: font-size 0.3s;
@@ -152,29 +166,29 @@
 .lolIconClosed {
   width: 19.2px;
   filter: invert();
+  transition: 0.3s;
 }
 
 .lolIconOpen {
-  width: 26.9px;
-  filter: invert();
-}
-
-.overwatchIconClosed {
-  width: 19.2px;
-  transition: 0.3s;
-}
-
-.overwatchIconOpen {
   width: 38.4px;
+  filter: invert();
   transition: 0.3s;
 }
 
+.overwatchIconClosed,
 .csgoIconClosed {
   width: 19.2px;
   transition: 0.3s;
 }
 
+.overwatchIconOpen,
 .csgoIconOpen {
   width: 38.4px;
   transition: 0.3s;
+}
+
+@media screen and (max-width: 1500px) {
+  .lowerContent {
+    margin-top: 0.2vh;
+  }
 }
