--- a/client/src/css-modules/NewFlowPage.module.css
+++ b/client/src/css-modules/NewFlowPage.module.css
@@ -1,7 +1,7 @@
 .videoInfoContainer {
-    margin-top: -16px;
+  margin-top: -1.5vh;
 }
 
 .headerText {
-    margin-bottom: 13px;
+  margin-bottom: 1.2vh;
 }
