--- a/client/src/css-modules/FetchFlow.module.css
+++ b/client/src/css-modules/FetchFlow.module.css
@@ -1,38 +1,38 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
 .topRow {
-    margin: 32px 0 48px 0;
+  margin: 3vh 0 4.5vh 0;
 }
 
 .formContainer {
-    width: 768px;
-    margin: 64px auto 0 auto;
+  width: 52vw;
+  margin: 6vh auto 0 auto;
 }
 
 .formText {
-    font-family: 'Lato', Helvetica;
-    width: 768px;
+  font-family: 'Lato', Helvetica;
+  max-width: 768px;
 }
 
 .logoContainer {
-    margin: 64px auto 64px auto;
+  margin: 6vh auto;
 }
 
 .youtubeLogo {
-    filter: grayscale(100);
-    height: 75px;
-    width: 77px;
-    margin-bottom: 10px;
+  filter: grayscale(100);
+  height: 75px;
+  width: 77px;
+  margin-bottom: 10px;
 }
 
 .nestedDiv {
-    display: flex;
-    flex-direction: column;
-    width: 115px;
+  display: flex;
+  flex-direction: column;
+  width: 6vw;
 }
 
 .youtubeText {
-    font-size: 19px;
-    font-weight: 400;
-    color: #707070;
+  font-size: 19px;
+  font-weight: 400;
+  color: #707070;
 }
