--- a/client/src/css-modules/SideNavComponent.module.css
+++ b/client/src/css-modules/SideNavComponent.module.css
@@ -50,7 +50,7 @@
 }
 
 .lowerContent {
-  margin-top: 4vh;
+  margin-top: 2vh;
 }
 
 .myFlowsButtonClosed,
@@ -101,6 +101,7 @@
 .ssbmClosed,
 .overwatchClosed,
 .csgoClosed {
+  margin-top: 1vh;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -115,7 +116,7 @@
 .ssbmOpen,
 .overwatchOpen,
 .csgoOpen {
-  margin-top: 1vh;
+  margin-top: 2vh;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -148,7 +149,7 @@
 .gamepadClosed {
   color: white;
   display: block;
-  margin-top: 1.2vh;
+  margin-top: 1.5vh;
   font-size: 22px;
   border-bottom: 1px solid black;
   transition: font-size 0.3s;
@@ -157,7 +158,7 @@
 .gamepadOpen {
   color: white;
   display: block;
-  margin-top: 2.4vh;
+  margin-top: 3vh;
   font-size: 44px;
   border-bottom: 1px solid black;
   transition: font-size 0.3s;
@@ -188,7 +189,23 @@
 }
 
 @media screen and (max-width: 1500px) {
+  .openButtonClosed {
+    margin-top: 1vh;
+  }
+
+  .openButtonOpen {
+    margin-top: 2vh;
+  }
+
   .lowerContent {
-    margin-top: 0.2vh;
+    margin-top: 0vh;
+  }
+
+  .logoClosed {
+    margin-top: 0.8vh;
+  }
+
+  .logoOpen {
+    margin-top: 0.8vh;
   }
 }
