--- a/client/src/css-modules/FlowTitleAndForm.module.css
+++ b/client/src/css-modules/FlowTitleAndForm.module.css
@@ -1,39 +1,51 @@
 .container {
-    display: flex;
-    width: 1125px;
-    justify-content: space-between;
-    margin-bottom: 16px;
+  display: flex;
+  width: 1120px;
+  justify-content: space-between;
+  margin-bottom: 16px;
 }
 
 .textalign {
-    display: block;
-    margin: 16.8px 0 auto 9.6px;
+  display: block;
+  margin: 16.8px 0 auto 0;
 }
 
 .formContainer {
-    display: flex;
-    justify-content: space-between;
-    width: inherit;
+  display: flex;
+  justify-content: space-between;
+  width: inherit;
 }
 
 .input {
-    width: 866px;
-    margin-top: 5px;
-    font-size: 23.4px;
+  width: 866px;
+  margin-top: 5px;
+  font-size: 23.4px;
 }
 
 .errorContainer {
-    position: absolute;
-    height: 24px;
-    width: 240px;
+  position: absolute;
+  height: 24px;
+  width: 240px;
 
-    top: 32px;
-    right: 225px;
+  top: 32px;
+  right: 225px;
 }
 
 .errorList {
-    text-align: center;
-    list-style: none;
-    margin-top: -10px;
-    font-size: 14px;
+  text-align: center;
+  list-style: none;
+  margin-top: -10px;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 1652px) {
+  .container {
+    width: 1024px;
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .container {
+    width: 840px;
+  }
 }
