--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,102 +1,146 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body.modal-open {
-    overflow: auto !important;
+  overflow: auto !important;
 }
 
 .loggedInButton {
-    padding: 4px 18px;
+  padding: 4px 18px;
 }
 
 .form-control:focus {
-    border-color: #ffba60;
-    box-shadow: 0 0 0 2px rgba(202, 108, 0, 0.25);
+  border-color: #ffba60;
+  box-shadow: 0 0 0 2px rgba(202, 108, 0, 0.25);
 }
 
 .md-form .prefix.active {
-    color: #ffba60;
+  color: #ffba60;
 }
 
 .md-form input:focus {
-    color: grey;
+  color: grey;
 }
 
-.md-form input:not([type]):focus:not([readonly]), .md-form input[type="text"]:not(.browser-default):focus:not([readonly]), .md-form input[type="password"]:not(.browser-default):focus:not([readonly]), .md-form input[type="email"]:not(.browser-default):focus:not([readonly]), .md-form input[type="url"]:not(.browser-default):focus:not([readonly]), .md-form input[type="time"]:not(.browser-default):focus:not([readonly]), .md-form input[type="date"]:not(.browser-default):focus:not([readonly]), .md-form input[type="datetime"]:not(.browser-default):focus:not([readonly]), .md-form input[type="datetime-local"]:not(.browser-default):focus:not([readonly]), .md-form input[type="tel"]:not(.browser-default):focus:not([readonly]), .md-form input[type="number"]:not(.browser-default):focus:not([readonly]), .md-form input[type="search"]:not(.browser-default):focus:not([readonly]), .md-form input[type="phone"]:not(.browser-default):focus:not([readonly]), .md-form input[type="search-md"]:focus:not([readonly]), .md-form textarea.md-textarea:focus:not([readonly]) {
-    border-bottom: 1px solid #ffba60;
-    box-shadow: 0 1px 0 0 #ffba60;
+.md-form input:not([type]):focus:not([readonly]),
+.md-form input[type='text']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='password']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='email']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='url']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='time']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='date']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='datetime']:not(.browser-default):focus:not([readonly]),
+.md-form
+  input[type='datetime-local']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='tel']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='number']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='search']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='phone']:not(.browser-default):focus:not([readonly]),
+.md-form input[type='search-md']:focus:not([readonly]),
+.md-form textarea.md-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid #ffba60;
+  box-shadow: 0 1px 0 0 #ffba60;
 }
 
-.md-form input:not([type]):focus:not([readonly])+label, .md-form input[type="text"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="password"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="email"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="url"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="time"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="date"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="datetime"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="datetime-local"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="tel"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="number"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="search"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="phone"]:not(.browser-default):focus:not([readonly])+label, .md-form input[type="search-md"]:focus:not([readonly])+label, .md-form textarea.md-textarea:focus:not([readonly])+label {
-    color: #ffba60;
+.md-form input:not([type]):focus:not([readonly]) + label,
+.md-form input[type='text']:not(.browser-default):focus:not([readonly]) + label,
+.md-form
+  input[type='password']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form
+  input[type='email']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form input[type='url']:not(.browser-default):focus:not([readonly]) + label,
+.md-form input[type='time']:not(.browser-default):focus:not([readonly]) + label,
+.md-form input[type='date']:not(.browser-default):focus:not([readonly]) + label,
+.md-form
+  input[type='datetime']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form
+  input[type='datetime-local']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form input[type='tel']:not(.browser-default):focus:not([readonly]) + label,
+.md-form
+  input[type='number']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form
+  input[type='search']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form
+  input[type='phone']:not(.browser-default):focus:not([readonly])
+  + label,
+.md-form input[type='search-md']:focus:not([readonly]) + label,
+.md-form textarea.md-textarea:focus:not([readonly]) + label {
+  color: #ffba60;
 }
 
-.btn-light.focus, .btn-light:focus {
-    box-shadow: none;
-    border: 1px solid rgb(207, 207, 207);
+.btn-light.focus,
+.btn-light:focus {
+  box-shadow: none;
+  border: 1px solid rgb(207, 207, 207);
 }
 
 .btn-light:hover {
-    box-shadow: none;
-    border: 1px solid rgb(207, 207, 207);
+  box-shadow: none;
+  border: 1px solid rgb(207, 207, 207);
 }
 
 .btn-light {
-    transition-property: color, background-color, box-shadow;
+  transition-property: color, background-color, box-shadow;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .inactiveCard {
-    filter: brightness(88%);
-    transform: scale(.9, .9);
-    transition: filter 0.3s, transform 0.3s, padding-right 0.3s, margin 0.3s;
+  filter: brightness(88%);
+  transform: scale(0.9, 0.9);
+  transition: filter 0.3s, transform 0.3s, padding-right 0.3s, margin 0.3s;
 }
 
 .activeCard {
-    padding-right: 32px;
-    padding-left: 13px;
-    width: 339px;
-    margin: 13px 0;
-    transition: filter 0.3s, transform 0.3s, padding-right 0.3s, margin 0.3s;
+  padding-right: 32px;
+  padding-left: 13px;
+  width: 339px;
+  margin: 13px 0;
+  transition: filter 0.3s, transform 0.3s, padding-right 0.3s, margin 0.3s;
 
-    box-sizing: content-box;
+  box-sizing: content-box;
 }
 
-.ytp-pause-overlay .ytp-pause-overlay-controls-hidden
- {
-    display: none;
- }
+.ytp-pause-overlay .ytp-pause-overlay-controls-hidden {
+  display: none;
+}
 
- .noteCardContainer {
-    display: flex;
-    flex-direction: column;
-    grid-column: 5 / 6;
-    grid-row: 1 / 6;
-    margin-right: 19px;
-    width: 402px;
-    background-color: rgb(231, 231, 231);
-    padding-bottom: 32px;
-    border-left: 2px solid rgb(200, 200, 200);
-    box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.2);
-    min-height: 100vh;
-    overflow-y: scroll;
-    overflow-x: hidden;
+.noteCardContainer {
+  display: flex;
+  flex-direction: column;
+  width: 368px;
+  background-color: rgb(231, 231, 231);
+  padding-bottom: 32px;
+  border-left: 2px solid rgb(200, 200, 200);
+  box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.2);
+  min-height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.noteCardContainer::-webkit-scrollbar {
+  width: 0;
 }
 
 a {
-    transition: none;
+  transition: none;
 }
 
 .no-scroll {
-    height: 100%;
-    overflow-y: hidden;
+  height: 100%;
+  overflow-y: hidden;
 }
